--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -17,7 +17,11 @@
                 <tr>
                     <th>ID</th>
                     <th>Tên</th>
-                    <th>Email</th>
+                    <th>Date</th>
+                    <th>Sale</th>
+                    <th>Category</th>
+                    <th>like</th>
+                    <th>Image</th>
                     <th>Thao tác</th>
                 </tr>
             </thead>
@@ -25,7 +29,12 @@
                 <tr ng-repeat="user in users">
                     <td>{{ user.id }}</td>
                     <td>{{ user.name }}</td>
-                    <td>{{ user.email }}</td>
+                    <td>{{ user.Date }}</td>
+                    <td>{{ user.Sale }}</td>
+                    <td>{{ user.Category }}</td>
+                    <td>{{ user.like }} /10</td>
+                    <td><img ng-src="{{ user.image }}" alt="Hình ảnh" width="50"></td>
+                    
                     <td>
                         <button class="btn btn-warning" ng-click="openModal('edit', user)">Chỉnh sửa</button>
                         <button class="btn btn-danger" ng-click="deleteUser(user)">Xóa</button>
@@ -50,9 +59,26 @@
                             <input type="text" class="form-control" ng-model="formData.name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" ng-model="formData.email" required>
+                            <label for="Date">Date:</label>
+                            <input type="date" class="form-control" ng-model="formData.date" required>
                         </div>
+                        <div class="form-group">
+                          <label for="Sale">Sale:</label>
+                          <input type="number" class="form-control" ng-model="formData.Sale" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="Category">Category :</label>
+                        <input type="text" class="form-control" ng-model="formData.Category " required>
+                    </div>
+                     
+                    <div class="form-group">
+                      <label for="Like">Like:</label>
+                      <input type="number" class="form-control" ng-model="formData.Like" min="0" max="10" required>
+                  </div>
+                    <div class="form-group">
+                      <label for="image">Image:</label>
+                      <input type="url" class="form-control" ng-model="formData.Image" required>
+                  </div>
                         <button type="submit" class="btn btn-success">Lưu</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
                     </form>
