--- a/angularjs test/index.html
+++ b/angularjs test/index.html
@@ -15,14 +15,15 @@
 <body ng-controller="MainController">
     <div class="container">
         <h2>Angular 2 QuickStart</h2>
-        <h3>Curren User:Test@Test.com</h3>
+        <h3>Current User: Test@Test.com</h3>
         <button class="btn btn-primary" ng-click="openModal('add')">Add Product</button>
-        <table class="table">
+
+        <table class="table custom-table ">
             <thead>
                 <tr>
                     <th></th>
-                    <th>Name</th>
-                    <th>Price</th>
+                    <th>Product Name</th>
+                    <th>Product Price</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,15 +35,12 @@
                     </td>
                     <td>{{ user.name }}</td>
                     <td>{{ user.Price }}</td>
-
                 </tr>
             </tbody>
         </table>
     </div>
 
-
     <div id="myModal" class="modal fade modal-edit" role="dialog">
-
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -59,9 +57,7 @@
                             <label for="floatnumber">Product Price:</label>
                             <input type="text" class="form-control" ng-model="formData.Price" required>
                         </div>
-
                         <button type="submit" class="btn btn-success">Submit</button>
-
                     </form>
                 </div>
             </div>
