--- a/angularjs test/index.html
+++ b/angularjs test/index.html
@@ -17,7 +17,7 @@
         <h2>Angular 2 QuickStart</h2>
         <h3>Current User: Test@Test.com</h3>
         <button class="btn btn-primary" ng-click="openModal('add')">Add Product</button>
-
+      <div class="one1">
         <table class="table custom-table ">
             <thead>
                 <tr>
@@ -38,6 +38,9 @@
                 </tr>
             </tbody>
         </table>
+
+      </div>
+        
     </div>
 
     <div id="myModal" class="modal fade modal-edit" role="dialog">
